--- a/index.html
+++ b/index.html
@@ -15,6 +15,24 @@
         <img src="sexyman.png" alt="Sexy man" width="500" height="600">
 
 
+        <table style="width:30%">
+            <caption> <strong>Skills</strong>  </caption>
+          
+            <tr>
+              <td scope="col"> <strong> Software Quality Assurance </strong>  <br> Functional
+                Non-Functional Testing,<br>
+                Static and Dynamic Testing<br>
+                Defect/Bug Tracking<br>
+                Manual Testing</td>
+              <td > <strong>Accessibility</strong><br>
+                SR<br>
+                Color Cntrast<br>
+                PDF remediation
+            </td>
+
+            </tr>
+
+          </table>
 </center>
 </body>
 
